<resources>
    <string name="app_name">CATEGORYDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chat">채 팅</string>
    <string name="jjim"> 찜 </string>
    <string name="writing">글쓰기</string>
    <string name="mypage">마이페이지</string>

    <string name="btnFinish">FINISH</string>
    <string name="btnSend">SEND</string>
    <string name="hint">메시지를 입력하세요</string>

    <string name="login">LOGIN</string>
    <string name="Register">JOIN US</string>
    <string name="hintId">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">GO LOGIN</string>
    <string name="btnRegister">JOIN US</string>
    <string name="admob_app_id">ca-app-pub-3723856646359225~1228730382</string>

    <string name="banner_ad_unit_id">ca-app-pub-3723856646359225/5941807497</string>

    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="clothes">옷</string>
    <string name="donation">기부</string>

    <string name="profile">프 로 필</string>
    <string name="logout">로그아웃</string>
    <string name="mywriting">내가 쓴 글</string>

    <string name="hintTitle">Enter Title</string>
    <string name="btnImage">Choose Image</string>
    <string name="category">카테고리</string>
    <string name="title">제       목</string>
    <string name="hintText">Enter text</string>
    <string name="btnUpload">Upload image to Firebase Storage</string>

    <string name="btnJjim">Button</string>
    <string name="imageName">JSon Image Name</string>

    <string name="machine">machine</string>

    <string name="rental">렌탈</string>

    <string name="stationery">문구</string>

    <string name="toy">토이</string>
    <string name="title_activity_maps">Map</string>

</resources>
